style: added favicons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mirko Bonomi | Resume</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/png" sizes="48x48" href="public/favicon-48x48.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="72x72" href="public/favicon-72x72.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="96x96" href="public/favicon-96x96.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="144x144" href="public/favicon-144x144.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="192x192" href="public/favicon-192x192.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="256x256" href="public/favicon-256x256.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="384x384" href="public/favicon-384x384.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="icon" type="image/png" sizes="512x512" href="public/favicon-512x512.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <link rel="manifest" href="public/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="192x192" href="public/favicon-192x192.png?v=094441163e89fb5bf11c9299573b1bf5">
+  <meta name="theme-color" content="#ffffff">
   <style>
     :root {
       --primary-color: #2c3e50;
